# allica-bank

./: README.md  app.py  database.py  exceptions.py  pyproject.toml
models/: user.py
tests/: test_app.py  test_database.py  test_user_models.py  users.db
