[tool.poetry]
name = "allica-bank"
version = "0.1.0"
description = ""
authors = ["Luke Barrett <luke.barrett@digital.originenterprises.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
loguru = "^0.7.2"
pydantic = "^2.10.1"
black = "^24.10.0"
fastapi = "^0.115.5"
pytest = "^8.3.3"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
